# MaskDINO2CPP

./: CMakeLists.txt  MaskDINO2.cpp  MaskDINO2Decoder.cpp  MaskDINO2Encoder.cpp  README.md  SwinL.cpp  main.cpp
include/: MaskDINO2Decoder.h  MaskDINO2Encoder.h  SemanticSegmentor.h  backbone.h  cfg.h  criterion.h  detectron2.h  matcher.h  registry.h
include/ms_deform_attn_cuda/: ms_deform_attn_cuda.cu
include/output/: output_util.h
include/structures/: bitmasks.h  boxes.h  image_list.h  instances.h
include/utils/: box_operations.h  memory.h  modules.h  pathmanager.h  position_encoding.h
